Домашнее задание - раздел 6 работа над ошибками